iptables
# Firewall configuration written by system-config-firewall
# Manual customization of this file is not recommended.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
###
-A INPUT -p tcp -m conntrack --ctstate INVALID,NEW -m tcp --tcp-flags SYN,ACK SYN,ACK -j REJECT --reject-with tcp-reset
-A INPUT -p tcp -m conntrack --ctstate NEW -m tcp --sport 0:1023 -j LOG --log-prefix "IPTABLES LOG(BAD TCP): "
-A INPUT -p tcp -m conntrack --ctstate NEW -m tcp --sport 0:1023 -j DROP
-A INPUT -p icmp -m icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
### ANTISPUFFING
-A INPUT -s 0.0.0.0/8 -j DROP
-A INPUT -s 255.255.255.255/8 -j DROP
-A INPUT -s 10.0.0.0/8 -j DROP
-A INPUT -s 169.254.0.0/16 -j DROP
-A INPUT -s 192.168.0.0/16 -j DROP
-A INPUT -s 127.0.0.0/8 -i eth0 -j DROP
-A INPUT -s 224.0.0.0/3 -j DROP
### FOR CGP RULES
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -m conntrack --ctstate NEW -j ACCEPT
###
-A INPUT -p tcp -m tcp -j LOG --log-prefix "IPTABLES LOG(BAD TCP): "
-A INPUT -p tcp -m tcp -j REJECT --reject-with tcp-reset
-A INPUT -j LOG --log-prefix "IPTABLES LOG(OTHER BAD): "
-A INPUT -j REJECT --reject-with icmp-host-unreachable
-A FORWARD -j REJECT --reject-with icmp-host-unreachable
COMMIT
